# hf-local-hub

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: API.md  USAGE.md
docs/examples/: api_client_demo.py  basic_upload.py  diffusers_demo.py  transformers_demo.py
python/: README.md  pyproject.toml  ruff.toml
python/src/hf_local/: __init__.py  cli.py
python/tests/: test_cli.py  test_integration.py  test_transformers.py
server/: coverage.txt  go.mod  go.sum  main.go
server/api/: handlers.go  handlers_test.go  router.go
server/auth/: auth.go  hf_oauth.go  ldap.go
server/config/: config.go
server/data/: hf-local.db
server/db/: db.go  db_test.go  models.go
server/middleware/: limits.go  ratelimit.go
server/storage/: storage.go  storage_test.go
server/ui/: embed.go
server/ui/templates/: detail.html  list.html
