[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hf-local"
description = "Lightweight local Hugging Face Hub server and client"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["huggingface", "huggingface-hub", "local", "server"]
dependencies = [
    "huggingface-hub>=0.25.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
]
dynamic = ["version"]

[project.optional-dependencies]
serve = ["hatchling"]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
hf-local = "hf_local.cli:app"

[tool.hatch.version]
path = "src/hf_local/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_local"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104"]

[tool.mypy]
strict = true
