[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hf-local"
description = "Lightweight local Hugging Face Hub server and client"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "hf-local-hub", email = "maintainer@hf-local-hub.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["huggingface", "huggingface-hub", "local", "server", "ml", "ai"]
dependencies = [
    "huggingface-hub>=0.25.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/lyani/hf-local-hub"
Documentation = "https://github.com/lyani/hf-local-hub#readme"
Repository = "https://github.com/lyani/hf-local-hub"
Issues = "https://github.com/lyani/hf-local-hub/issues"

[project.optional-dependencies]
serve = ["hatchling"]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
hf-local = "hf_local.cli:app"

[tool.hatch.version]
path = "src/hf_local/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_local"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "PL", "INP001", "I001"]
"src/hf_local/__init__.py" = ["E722", "TRY003", "EM102", "PLC0415", "PLR2004", "S603"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "src.hf_local.*"
ignore_missing_imports = true
check_untyped_defs = false
